# algorithmicProject-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
includes/: triangulation.hpp
input/: input.json
output/: output.json
tests_results/: test_results.xlsx
